Fix padding on mobile cards - Country page

--- a/assets/scss/organisms/content-cards/_photo-cta-cards.scss
+++ b/assets/scss/organisms/content-cards/_photo-cta-cards.scss
@@ -12,6 +12,12 @@
         @include breakpoint(small only) {
             margin-top: 60px;
         }
+
+        .card-item {
+            @include breakpoint(small only) {
+                padding: 0;
+            }
+        }
     }
 
     .cards-title {
